[package]
name = "gst-opencv-bayer-convert"
version = "0.1.0"
edition = "2024"
description = "Bayer to RGB/A converter powered by OpenCV"

[dependencies]
gst = { package = "gstreamer", version = "0.24.3", features = ["v1_16"] }
gst_base = { package =  "gstreamer-base", version = "0.24.2", features = ["v1_16"] }
gst_base_sys = { package = "gstreamer-base-sys", version = "0.24.2", features = ["v1_16"] }
gstreamer-check = { version = "0.24.2", features = ["v1_16"] }
gst_sys = { package = "gstreamer-sys" , version = "0.24.2", features = ["v1_16"] }
gst_video = { package =  "gstreamer-video" , version = "0.24.3", features = ["v1_16"] }
opencv = { version = "0.97.1", features = ["clang-runtime", "imgproc"] }

[build-dependencies]
gst-plugin-version-helper = "0.8.3"

[features]
static = []
capi = []

[lib]
name = "gstrsbayer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
